client/styles/home-page.css
@import url("backgrounds.css");

body {
    height: 100%;
    width: 100%;
    overflow: hidden;
    user-select: none;
    margin: 0px;
}

:root {
    --buttonbackground: linear-gradient(
            102.7deg,
            rgb(253, 218, 255) 8.2%,
            rgb(223, 173, 252) 19.6%,
            rgb(173, 205, 252) 36.8%,
            rgb(173, 252, 244) 73.2%,
            rgb(202, 248, 208) 90.9%
    );
    --buttonhover: rgba(170, 170, 170, 0.26);
}

.card1 {
    animation: flip 2s infinite;
}

.card2 {
    animation: flip-opposite 2s infinite;
}
@keyframes flip {
    0% {
        transform: perspective(600px) rotateY(-180deg);
        content: url("/client/cards/1B.svg");
    }
    50% {
        transform: perspective(600px) rotateY(180deg);
    }
    100% {
        transform: perspective(600px) rotateY(180deg);
        content: url("/client/cards/1B.svg");
    }
}

@keyframes flip-opposite {
    0% {
        transform: perspective(600px) rotateY(180deg);
        content: url("/client/cards/1B.svg");
    }
    50% {
        transform: perspective(600px) rotateY(-180deg);
    }
    100% {

        transform: perspective(600px) rotateY(-180deg);
        content: url("/client/cards/1B.svg");
    }
}

@font-face {
    font-family: myFirstFont;
    src: url("../Font.ttf");
}


.home-pictures {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    height: 50vh; /* Adjust height as needed */
    width: 45%; /* Occupy 45% of the viewport width */
    padding: 20px; /* Add some padding for spacing */
    scale: 50%;
}

.home-pictures.left {
    /*left: 0; !* Position the container on the left side *!*/
    transform: rotate(-10deg)
}

.home-pictures.right {
    /*right: 0; !* Position the container on the right side *!*/
    transform: rotate(10deg)
}

.home-ui {
    display: flex;
    flex-direction: column;
    flex-direction: column;
    /* gap: 250px; */
    height: 100%;
    width: 100%;
    justify-content: space-around;
    align-items: center;
    position: fixed;
    /*z-index: -1;*/
}

#title-of-game {
    margin: 10px;
    /*padding-top: 20px;*/
    font-size: 150px;
    /*border-bottom: 5px solid black;*/
    text-decoration: solid;
    text-align: center;
    font-family: myFirstFont;
    src: url("../Font.ttf");
    color: black;
    text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff, 1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
}

.home-screen-buttons {
    display: flex;
    flex-direction: column;
    justify-content: center;
    position: relative;
    align-items: center;
    padding-left: 56px;
}

html {
    height: 100%
}

.home-screen-buttons button {
    display: block;
    font-family: 'myFirstFont';
    font-size: 5em;
    color: black;
    font-weight: 800;
    text-decoration: none;
    background: none;
    transition: 0.4s;
    border: none;
    text-transform: uppercase;
    max-width: fit-content;
    cursor: pointer;
    text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff,
    1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
    padding-left: 57px;
}

.home-screen-buttons button:hover {
    color: #333;
}


/* Home screen button select, ANIMATED BUTTON + ANIMATED ICON */
.home-screen-buttons img {
    visibility: hidden;
    width: 40px;
    transform: rotate(-0.25turn);
    width: 40px;
    display: inline-flex;
    align-items: center;
    position: relative;
    border: solid black;
    background-color: white;
    border-radius: 10%;
}

.home-screen-buttons button:hover img {
    visibility: visible;
    animation-name: slideleft;
    animation-duration: 1.1s;
    animation-iteration-count: infinite;
}

@keyframes slideleft {

    0% {
        transform: translateX(20px) rotate(-0.25turn);
        /*margin-left: 15px;*/
    }

    50% {
        transform: translateX(5px) rotate(-0.25turn);
        /*margin-left: 0px;*/
    }
    100% {
        transform: translateX(20px) rotate(-0.25turn);
        /*margin-left: 0px;*/
    }

}

/* Home screen button select, NO ANIMATED BUTTON + ANIMATED ICON */

/* .home-screen-buttons img {
    visibility: hidden;
    width: 40px;

}
.home-screen-buttons button:hover img{
    visibility: visible;
    transform: rotate(-0.25turn);
    width: 40px;
    display:inline-flex;
    align-items: center;
    position: relative;
    animation-name: slideleft;
    animation-duration: 1.1s;
    /* border: solid black;
    background-color: white;
}

@keyframes slideleft {

    0%{
        transform: translate(50px,0px)rotate(-0.25turn);
    }

    100%{
        transform: translate(0px,0px)rotate(-0.25turn);
    }


} */

@keyframes bg-animate {
    0% {
        transform: translate(-100px, -100px);
    }

    100% {
        transform: translate(-200px, -200px);
    }
}

@keyframes logo-animation {
    0%, 24.99%, 100% {
        background-image: url("../Images/clubs.svg");

    }
    25%, 49.99% {
        background-image: url("../Images/spades.svg");

    }
    50%, 74.99% {
        background-image: url("../Images/diamonds.svg");

    }
    75%, 99.99% {
        background-image: url("../Images/hearts.svg");

    }
}

.header {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    height: 205px;
}

.logo {
    animation-name: logo-animation;
    animation-duration: 1s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    animation-play-state: running;
    height: 40px;
    min-width: 50px;
    background-repeat: no-repeat;
    background-size: contain;
    position: relative;
    right: 31.37%;
    top: -1%;
}


#Main-phase{
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    border: none !important;
}

.p1handcontainer{
    position: absolute;
    bottom: -15%;
    margin-bottom: 12.5%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.p1handcontainer .card {
    position: absolute;
    width: fit-content;
    height: fit-content;
    border-radius: 10px;
    background: white;
    display: flex;
    justify-content: center;
    align-items: center;
    border: none;
    cursor: pointer;
    transition: 0.5s;
    transform-origin: 50% 100%;
    border-radius: 13px;
    transform: rotate(calc(var(--i)* 15deg)) translate(calc((var(--i))* 70px), -40px);
}

.p1handcontainer .card img {
    width: 12vw;
    height: 90%;
}


.p1handcontainer:hover .card:nth-child(3) {
    transform: rotate(2deg) translate(calc((var(--i)) * 50px), -40px);
}

.p1handcontainer .card:hover {
    translate: calc(var(--i)*20px)-50px;
    margin-bottom: 0%;
}



.dropport{
    display: flex;
    height: 30%;
    margin: auto;
    position: relative;
    top:45%;
    background-color: white;
    width: 30%;
    border-style:double;
    border-color: #767676;
    border-radius: 8px;
    border-left-width: 20px;
    background-color: #8e8b8b;
    margin-top: -5%; 
    
}

.dropleft {
    width: 50%;
    height: 100%;
}

.dropright {
    width: 50%;
    height: 100%;
}


.hidden{
    display: none !important;
}

#link {
    width: 25vh;
    height: 10vh;
    display: flex;
    justify-content: center;
    background-color: brown;
    color: white;
}

.wait {
    margin: auto;
    height: 50vh;
    width: 50vh;
    background-color: rgb(255, 0, 0);
    color: rgb(255, 255, 255);
    text-align: center;
    font-size: 5vh;
    

}
#joker {
    margin: auto;
    height: 40vh;
    width: 50vh;
}
.heightcheck img{
   
    height: 30vh;
    
}

#room-ID{
    width: 20vh;
    height: 20vh;
}
.showcode{
    background-color: greenyellow;
    height: 20vh;
    width: 40vh;
    color: white;
    font-size: larger;
}
.wait-phase{
    height: 100vh;
}

.form-control {
    display: flex;
    bottom: 20%;
}

button:focus{
    outline: none;
}

